[tool.poetry]
name = "snakes-cafe"
version = "0.1.0"
description = ""
authors = ["Nilesh Ranjan <nileshranjan11@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
